# METAHACKATHON

./: Dockerfile  README.md  agent.py  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
static/: script.js  structure.js  style.css
templates/: index.html
