[project]
name = "disaster-env"
version = "0.1.0"
description = "AI Disaster Response Environment for Hackathon"
authors = [
    {name="Saurabh Pandey", email="saurabhpandey7489@example.com"}
]
dependencies = [
    "flask"
]
requires-python = ">=3.10"
[project.scripts]
server = "server.app:app"

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]


