[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-disaster-response-env"
version = "1.0.0"
description = "OpenEnv-compatible AI disaster response RL environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Saurabh" }]
dependencies = [
    "flask>=3.0.3",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.html", "*.css", "*.js", "*.txt"]